crates/as2/src/lexer/snapshots/ruasc_as2__lexer__tests__all_samples@if_else.as.snap
---
source: crates/as2/src/lexer/tests.rs
expression: tokens
input_file: samples/if_else.as
---
- kind:
    Keyword: Var
  span:
    start: 0
    end: 3
  raw: var
- kind: Identifier
  span:
    start: 4
    end: 13
  raw: condition
- kind:
    Operator: Assign
  span:
    start: 14
    end: 15
  raw: "="
- kind: Identifier
  span:
    start: 16
    end: 20
  raw: "true"
- kind: Semicolon
  span:
    start: 20
    end: 21
  raw: ;
- kind: Newline
  span:
    start: 21
    end: 22
  raw: "\n"
- kind:
    Keyword: Var
  span:
    start: 22
    end: 25
  raw: var
- kind: Identifier
  span:
    start: 26
    end: 27
  raw: x
- kind:
    Operator: Assign
  span:
    start: 28
    end: 29
  raw: "="
- kind: Integer
  span:
    start: 30
    end: 31
  raw: "1"
- kind: Semicolon
  span:
    start: 31
    end: 32
  raw: ;
- kind: Newline
  span:
    start: 32
    end: 33
  raw: "\n"
- kind:
    Keyword: Var
  span:
    start: 33
    end: 36
  raw: var
- kind: Identifier
  span:
    start: 37
    end: 38
  raw: y
- kind:
    Operator: Assign
  span:
    start: 39
    end: 40
  raw: "="
- kind:
    Operator: Sub
  span:
    start: 41
    end: 42
  raw: "-"
- kind: Integer
  span:
    start: 42
    end: 43
  raw: "1"
- kind: Semicolon
  span:
    start: 43
    end: 44
  raw: ;
- kind: Newline
  span:
    start: 44
    end: 45
  raw: "\n"
- kind: Newline
  span:
    start: 45
    end: 46
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 81
    end: 83
  raw: if
- kind: OpenParen
  span:
    start: 84
    end: 85
  raw: (
- kind: Identifier
  span:
    start: 85
    end: 94
  raw: condition
- kind: CloseParen
  span:
    start: 94
    end: 95
  raw: )
- kind: Identifier
  span:
    start: 96
    end: 107
  raw: doSomething
- kind: OpenParen
  span:
    start: 107
    end: 108
  raw: (
- kind: CloseParen
  span:
    start: 108
    end: 109
  raw: )
- kind: Semicolon
  span:
    start: 109
    end: 110
  raw: ;
- kind: Newline
  span:
    start: 110
    end: 111
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 111
    end: 113
  raw: if
- kind: OpenParen
  span:
    start: 114
    end: 115
  raw: (
- kind: Identifier
  span:
    start: 115
    end: 116
  raw: x
- kind:
    Operator: GreaterThan
  span:
    start: 117
    end: 118
  raw: ">"
- kind: Integer
  span:
    start: 119
    end: 120
  raw: "0"
- kind: CloseParen
  span:
    start: 120
    end: 121
  raw: )
- kind: Identifier
  span:
    start: 122
    end: 127
  raw: trace
- kind: OpenParen
  span:
    start: 127
    end: 128
  raw: (
- kind:
    String: Double
  span:
    start: 128
    end: 138
  raw: positive
- kind: CloseParen
  span:
    start: 138
    end: 139
  raw: )
- kind: Semicolon
  span:
    start: 139
    end: 140
  raw: ;
- kind:
    Keyword: Else
  span:
    start: 141
    end: 145
  raw: else
- kind: Identifier
  span:
    start: 146
    end: 151
  raw: trace
- kind: OpenParen
  span:
    start: 151
    end: 152
  raw: (
- kind:
    String: Double
  span:
    start: 152
    end: 162
  raw: negative
- kind: CloseParen
  span:
    start: 162
    end: 163
  raw: )
- kind: Semicolon
  span:
    start: 163
    end: 164
  raw: ;
- kind: Newline
  span:
    start: 164
    end: 165
  raw: "\n"
- kind: Newline
  span:
    start: 165
    end: 166
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 192
    end: 194
  raw: if
- kind: OpenParen
  span:
    start: 195
    end: 196
  raw: (
- kind: Identifier
  span:
    start: 196
    end: 197
  raw: x
- kind:
    Operator: LessThan
  span:
    start: 198
    end: 199
  raw: "<"
- kind: Integer
  span:
    start: 200
    end: 201
  raw: "0"
- kind: CloseParen
  span:
    start: 201
    end: 202
  raw: )
- kind: OpenBrace
  span:
    start: 203
    end: 204
  raw: "{"
- kind: Newline
  span:
    start: 204
    end: 205
  raw: "\n"
- kind: Identifier
  span:
    start: 209
    end: 214
  raw: trace
- kind: OpenParen
  span:
    start: 214
    end: 215
  raw: (
- kind:
    String: Double
  span:
    start: 215
    end: 225
  raw: negative
- kind: CloseParen
  span:
    start: 225
    end: 226
  raw: )
- kind: Semicolon
  span:
    start: 226
    end: 227
  raw: ;
- kind: Newline
  span:
    start: 227
    end: 228
  raw: "\n"
- kind: CloseBrace
  span:
    start: 228
    end: 229
  raw: "}"
- kind:
    Keyword: Else
  span:
    start: 230
    end: 234
  raw: else
- kind:
    Keyword: If
  span:
    start: 235
    end: 237
  raw: if
- kind: OpenParen
  span:
    start: 238
    end: 239
  raw: (
- kind: Identifier
  span:
    start: 239
    end: 240
  raw: x
- kind:
    Operator: GreaterThan
  span:
    start: 241
    end: 242
  raw: ">"
- kind: Integer
  span:
    start: 243
    end: 244
  raw: "0"
- kind: CloseParen
  span:
    start: 244
    end: 245
  raw: )
- kind: OpenBrace
  span:
    start: 246
    end: 247
  raw: "{"
- kind: Newline
  span:
    start: 247
    end: 248
  raw: "\n"
- kind: Identifier
  span:
    start: 252
    end: 257
  raw: trace
- kind: OpenParen
  span:
    start: 257
    end: 258
  raw: (
- kind:
    String: Double
  span:
    start: 258
    end: 268
  raw: positive
- kind: CloseParen
  span:
    start: 268
    end: 269
  raw: )
- kind: Semicolon
  span:
    start: 269
    end: 270
  raw: ;
- kind: Newline
  span:
    start: 270
    end: 271
  raw: "\n"
- kind: CloseBrace
  span:
    start: 271
    end: 272
  raw: "}"
- kind:
    Keyword: Else
  span:
    start: 273
    end: 277
  raw: else
- kind:
    Keyword: If
  span:
    start: 278
    end: 280
  raw: if
- kind: OpenParen
  span:
    start: 281
    end: 282
  raw: (
- kind: Identifier
  span:
    start: 282
    end: 283
  raw: x
- kind:
    Operator: Equal
  span:
    start: 284
    end: 286
  raw: "=="
- kind: Integer
  span:
    start: 287
    end: 288
  raw: "0"
- kind: CloseParen
  span:
    start: 288
    end: 289
  raw: )
- kind: OpenBrace
  span:
    start: 290
    end: 291
  raw: "{"
- kind: Newline
  span:
    start: 291
    end: 292
  raw: "\n"
- kind: Identifier
  span:
    start: 296
    end: 301
  raw: trace
- kind: OpenParen
  span:
    start: 301
    end: 302
  raw: (
- kind:
    String: Double
  span:
    start: 302
    end: 308
  raw: zero
- kind: CloseParen
  span:
    start: 308
    end: 309
  raw: )
- kind: Semicolon
  span:
    start: 309
    end: 310
  raw: ;
- kind: Newline
  span:
    start: 310
    end: 311
  raw: "\n"
- kind: CloseBrace
  span:
    start: 311
    end: 312
  raw: "}"
- kind:
    Keyword: Else
  span:
    start: 313
    end: 317
  raw: else
- kind: OpenBrace
  span:
    start: 318
    end: 319
  raw: "{"
- kind: Newline
  span:
    start: 319
    end: 320
  raw: "\n"
- kind: Identifier
  span:
    start: 324
    end: 329
  raw: trace
- kind: OpenParen
  span:
    start: 329
    end: 330
  raw: (
- kind:
    String: Double
  span:
    start: 330
    end: 341
  raw: undefined
- kind: CloseParen
  span:
    start: 341
    end: 342
  raw: )
- kind: Semicolon
  span:
    start: 342
    end: 343
  raw: ;
- kind: Newline
  span:
    start: 343
    end: 344
  raw: "\n"
- kind: CloseBrace
  span:
    start: 344
    end: 345
  raw: "}"
- kind: Newline
  span:
    start: 345
    end: 346
  raw: "\n"
- kind: Newline
  span:
    start: 346
    end: 347
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 385
    end: 387
  raw: if
- kind: OpenParen
  span:
    start: 388
    end: 389
  raw: (
- kind: Identifier
  span:
    start: 389
    end: 398
  raw: condition
- kind: CloseParen
  span:
    start: 398
    end: 399
  raw: )
- kind: OpenBrace
  span:
    start: 400
    end: 401
  raw: "{"
- kind: CloseBrace
  span:
    start: 401
    end: 402
  raw: "}"
- kind: Newline
  span:
    start: 402
    end: 403
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 403
    end: 405
  raw: if
- kind: OpenParen
  span:
    start: 406
    end: 407
  raw: (
- kind: Identifier
  span:
    start: 407
    end: 416
  raw: condition
- kind: CloseParen
  span:
    start: 416
    end: 417
  raw: )
- kind: OpenBrace
  span:
    start: 418
    end: 419
  raw: "{"
- kind: CloseBrace
  span:
    start: 419
    end: 420
  raw: "}"
- kind:
    Keyword: Else
  span:
    start: 421
    end: 425
  raw: else
- kind: OpenBrace
  span:
    start: 426
    end: 427
  raw: "{"
- kind: CloseBrace
  span:
    start: 427
    end: 428
  raw: "}"
- kind: Newline
  span:
    start: 428
    end: 429
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 429
    end: 431
  raw: if
- kind: OpenParen
  span:
    start: 432
    end: 433
  raw: (
- kind: Identifier
  span:
    start: 433
    end: 442
  raw: condition
- kind: CloseParen
  span:
    start: 442
    end: 443
  raw: )
- kind: Identifier
  span:
    start: 444
    end: 449
  raw: trace
- kind: OpenParen
  span:
    start: 449
    end: 450
  raw: (
- kind:
    String: Double
  span:
    start: 450
    end: 458
  raw: single
- kind: CloseParen
  span:
    start: 458
    end: 459
  raw: )
- kind: Semicolon
  span:
    start: 459
    end: 460
  raw: ;
- kind:
    Keyword: Else
  span:
    start: 461
    end: 465
  raw: else
- kind: OpenBrace
  span:
    start: 466
    end: 467
  raw: "{"
- kind: CloseBrace
  span:
    start: 467
    end: 468
  raw: "}"
- kind: Newline
  span:
    start: 468
    end: 469
  raw: "\n"
- kind: Newline
  span:
    start: 469
    end: 470
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 506
    end: 508
  raw: if
- kind: OpenParen
  span:
    start: 509
    end: 510
  raw: (
- kind: Identifier
  span:
    start: 510
    end: 511
  raw: x
- kind:
    Operator: GreaterThan
  span:
    start: 512
    end: 513
  raw: ">"
- kind: Integer
  span:
    start: 514
    end: 515
  raw: "0"
- kind: CloseParen
  span:
    start: 515
    end: 516
  raw: )
- kind: Newline
  span:
    start: 516
    end: 517
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 521
    end: 523
  raw: if
- kind: OpenParen
  span:
    start: 524
    end: 525
  raw: (
- kind: Identifier
  span:
    start: 525
    end: 526
  raw: y
- kind:
    Operator: GreaterThan
  span:
    start: 527
    end: 528
  raw: ">"
- kind: Integer
  span:
    start: 529
    end: 530
  raw: "0"
- kind: CloseParen
  span:
    start: 530
    end: 531
  raw: )
- kind: Newline
  span:
    start: 531
    end: 532
  raw: "\n"
- kind: Identifier
  span:
    start: 540
    end: 545
  raw: trace
- kind: OpenParen
  span:
    start: 545
    end: 546
  raw: (
- kind:
    String: Double
  span:
    start: 546
    end: 561
  raw: both positive
- kind: CloseParen
  span:
    start: 561
    end: 562
  raw: )
- kind: Semicolon
  span:
    start: 562
    end: 563
  raw: ;
- kind: Newline
  span:
    start: 563
    end: 564
  raw: "\n"
- kind:
    Keyword: Else
  span:
    start: 568
    end: 572
  raw: else
- kind:
    Keyword: If
  span:
    start: 573
    end: 575
  raw: if
- kind: OpenParen
  span:
    start: 576
    end: 577
  raw: (
- kind: Identifier
  span:
    start: 577
    end: 578
  raw: y
- kind:
    Operator: LessThan
  span:
    start: 579
    end: 580
  raw: "<"
- kind: Integer
  span:
    start: 581
    end: 582
  raw: "0"
- kind: CloseParen
  span:
    start: 582
    end: 583
  raw: )
- kind: Newline
  span:
    start: 583
    end: 584
  raw: "\n"
- kind: Identifier
  span:
    start: 592
    end: 597
  raw: trace
- kind: OpenParen
  span:
    start: 597
    end: 598
  raw: (
- kind:
    String: Double
  span:
    start: 598
    end: 622
  raw: "x positive, y negative"
- kind: CloseParen
  span:
    start: 622
    end: 623
  raw: )
- kind: Semicolon
  span:
    start: 623
    end: 624
  raw: ;
- kind: Newline
  span:
    start: 624
    end: 625
  raw: "\n"
- kind:
    Keyword: Else
  span:
    start: 629
    end: 633
  raw: else
- kind: Newline
  span:
    start: 633
    end: 634
  raw: "\n"
- kind: Identifier
  span:
    start: 642
    end: 647
  raw: trace
- kind: OpenParen
  span:
    start: 647
    end: 648
  raw: (
- kind:
    String: Double
  span:
    start: 648
    end: 668
  raw: "x positive, y zero"
- kind: CloseParen
  span:
    start: 668
    end: 669
  raw: )
- kind: Semicolon
  span:
    start: 669
    end: 670
  raw: ;
- kind: Newline
  span:
    start: 670
    end: 671
  raw: "\n"
- kind: Newline
  span:
    start: 671
    end: 672
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 702
    end: 704
  raw: if
- kind: OpenParen
  span:
    start: 705
    end: 706
  raw: (
- kind: Identifier
  span:
    start: 706
    end: 715
  raw: condition
- kind: CloseParen
  span:
    start: 715
    end: 716
  raw: )
- kind: OpenBrace
  span:
    start: 717
    end: 718
  raw: "{"
- kind: Newline
  span:
    start: 718
    end: 719
  raw: "\n"
- kind: Identifier
  span:
    start: 723
    end: 734
  raw: doSomething
- kind: OpenParen
  span:
    start: 734
    end: 735
  raw: (
- kind: CloseParen
  span:
    start: 735
    end: 736
  raw: )
- kind: Semicolon
  span:
    start: 736
    end: 737
  raw: ;
- kind: Newline
  span:
    start: 737
    end: 738
  raw: "\n"
- kind: CloseBrace
  span:
    start: 738
    end: 739
  raw: "}"
- kind:
    Keyword: Else
  span:
    start: 740
    end: 744
  raw: else
- kind:
    Keyword: If
  span:
    start: 745
    end: 747
  raw: if
- kind: OpenParen
  span:
    start: 748
    end: 749
  raw: (
- kind: Identifier
  span:
    start: 749
    end: 763
  raw: otherCondition
- kind: CloseParen
  span:
    start: 763
    end: 764
  raw: )
- kind: Newline
  span:
    start: 764
    end: 765
  raw: "\n"
- kind: Identifier
  span:
    start: 769
    end: 784
  raw: doSomethingElse
- kind: OpenParen
  span:
    start: 784
    end: 785
  raw: (
- kind: CloseParen
  span:
    start: 785
    end: 786
  raw: )
- kind: Semicolon
  span:
    start: 786
    end: 787
  raw: ;
- kind: Newline
  span:
    start: 787
    end: 788
  raw: "\n"
- kind:
    Keyword: Else
  span:
    start: 788
    end: 792
  raw: else
- kind: OpenBrace
  span:
    start: 793
    end: 794
  raw: "{"
- kind: Newline
  span:
    start: 794
    end: 795
  raw: "\n"
- kind: Identifier
  span:
    start: 799
    end: 806
  raw: doFinal
- kind: OpenParen
  span:
    start: 806
    end: 807
  raw: (
- kind: CloseParen
  span:
    start: 807
    end: 808
  raw: )
- kind: Semicolon
  span:
    start: 808
    end: 809
  raw: ;
- kind: Newline
  span:
    start: 809
    end: 810
  raw: "\n"
- kind: CloseBrace
  span:
    start: 810
    end: 811
  raw: "}"
- kind: Newline
  span:
    start: 811
    end: 812
  raw: "\n"
- kind: Newline
  span:
    start: 812
    end: 813
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 898
    end: 900
  raw: if
- kind: OpenParen
  span:
    start: 901
    end: 902
  raw: (
- kind: Identifier
  span:
    start: 902
    end: 911
  raw: condition
- kind: CloseParen
  span:
    start: 911
    end: 912
  raw: )
- kind: Newline
  span:
    start: 912
    end: 913
  raw: "\n"
- kind: Identifier
  span:
    start: 917
    end: 927
  raw: statement1
- kind: OpenParen
  span:
    start: 927
    end: 928
  raw: (
- kind: CloseParen
  span:
    start: 928
    end: 929
  raw: )
- kind: Semicolon
  span:
    start: 929
    end: 930
  raw: ;
- kind: Newline
  span:
    start: 930
    end: 931
  raw: "\n"
- kind: Identifier
  span:
    start: 935
    end: 945
  raw: statement2
- kind: OpenParen
  span:
    start: 945
    end: 946
  raw: (
- kind: CloseParen
  span:
    start: 946
    end: 947
  raw: )
- kind: Semicolon
  span:
    start: 947
    end: 948
  raw: ;
- kind: Newline
  span:
    start: 979
    end: 980
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 1003
    end: 1005
  raw: if
- kind: OpenParen
  span:
    start: 1006
    end: 1007
  raw: (
- kind: Identifier
  span:
    start: 1007
    end: 1008
  raw: x
- kind: CloseParen
  span:
    start: 1008
    end: 1009
  raw: )
- kind: Newline
  span:
    start: 1009
    end: 1010
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 1014
    end: 1016
  raw: if
- kind: OpenParen
  span:
    start: 1017
    end: 1018
  raw: (
- kind: Identifier
  span:
    start: 1018
    end: 1019
  raw: y
- kind: CloseParen
  span:
    start: 1019
    end: 1020
  raw: )
- kind: Newline
  span:
    start: 1020
    end: 1021
  raw: "\n"
- kind: Identifier
  span:
    start: 1029
    end: 1034
  raw: trace
- kind: OpenParen
  span:
    start: 1034
    end: 1035
  raw: (
- kind:
    String: Double
  span:
    start: 1035
    end: 1038
  raw: y
- kind: CloseParen
  span:
    start: 1038
    end: 1039
  raw: )
- kind: Semicolon
  span:
    start: 1039
    end: 1040
  raw: ;
- kind: Newline
  span:
    start: 1040
    end: 1041
  raw: "\n"
- kind:
    Keyword: Else
  span:
    start: 1041
    end: 1045
  raw: else
- kind: Newline
  span:
    start: 1045
    end: 1046
  raw: "\n"
- kind: Identifier
  span:
    start: 1050
    end: 1055
  raw: trace
- kind: OpenParen
  span:
    start: 1055
    end: 1056
  raw: (
- kind:
    String: Double
  span:
    start: 1056
    end: 1072
  raw: ambiguous else
- kind: CloseParen
  span:
    start: 1072
    end: 1073
  raw: )
- kind: Semicolon
  span:
    start: 1073
    end: 1074
  raw: ;
- kind: Newline
  span:
    start: 1074
    end: 1075
  raw: "\n"
