crates/as2/src/lexer/snapshots/ruasc_as2__lexer__tests__all_samples@nested_break_continue.as.snap
---
source: crates/as2/src/lexer/tests.rs
expression: tokens
input_file: samples/as2/nested_break_continue.as
---
- kind:
    Keyword: For
  span:
    start: 0
    end: 3
  raw: for
- kind: OpenParen
  span:
    start: 4
    end: 5
  raw: (
- kind:
    Keyword: Var
  span:
    start: 5
    end: 8
  raw: var
- kind: Identifier
  span:
    start: 9
    end: 10
  raw: i
- kind:
    Operator: Assign
  span:
    start: 11
    end: 12
  raw: "="
- kind: Integer
  span:
    start: 13
    end: 14
  raw: "0"
- kind: Semicolon
  span:
    start: 14
    end: 15
  raw: ;
- kind: Identifier
  span:
    start: 16
    end: 17
  raw: i
- kind:
    Operator: LessThan
  span:
    start: 18
    end: 19
  raw: "<"
- kind: Integer
  span:
    start: 20
    end: 21
  raw: "4"
- kind: Semicolon
  span:
    start: 21
    end: 22
  raw: ;
- kind: Identifier
  span:
    start: 23
    end: 24
  raw: i
- kind:
    Operator: Increment
  span:
    start: 24
    end: 26
  raw: ++
- kind: CloseParen
  span:
    start: 26
    end: 27
  raw: )
- kind: OpenBrace
  span:
    start: 28
    end: 29
  raw: "{"
- kind: Newline
  span:
    start: 29
    end: 30
  raw: "\n"
- kind: Identifier
  span:
    start: 31
    end: 36
  raw: trace
- kind: OpenParen
  span:
    start: 36
    end: 37
  raw: (
- kind:
    String: Double
  span:
    start: 37
    end: 43
  raw: "i = "
- kind:
    Operator: Add
  span:
    start: 44
    end: 45
  raw: +
- kind: Identifier
  span:
    start: 46
    end: 47
  raw: i
- kind: CloseParen
  span:
    start: 47
    end: 48
  raw: )
- kind: Semicolon
  span:
    start: 48
    end: 49
  raw: ;
- kind: Newline
  span:
    start: 49
    end: 50
  raw: "\n"
- kind:
    Keyword: For
  span:
    start: 51
    end: 54
  raw: for
- kind: OpenParen
  span:
    start: 55
    end: 56
  raw: (
- kind:
    Keyword: Var
  span:
    start: 56
    end: 59
  raw: var
- kind: Identifier
  span:
    start: 60
    end: 61
  raw: j
- kind:
    Operator: Assign
  span:
    start: 62
    end: 63
  raw: "="
- kind: Integer
  span:
    start: 64
    end: 65
  raw: "0"
- kind: Semicolon
  span:
    start: 65
    end: 66
  raw: ;
- kind: Identifier
  span:
    start: 67
    end: 68
  raw: j
- kind:
    Operator: LessThan
  span:
    start: 69
    end: 70
  raw: "<"
- kind: Integer
  span:
    start: 71
    end: 72
  raw: "4"
- kind: Semicolon
  span:
    start: 72
    end: 73
  raw: ;
- kind: Identifier
  span:
    start: 74
    end: 75
  raw: j
- kind:
    Operator: Increment
  span:
    start: 75
    end: 77
  raw: ++
- kind: CloseParen
  span:
    start: 77
    end: 78
  raw: )
- kind: OpenBrace
  span:
    start: 79
    end: 80
  raw: "{"
- kind: Newline
  span:
    start: 80
    end: 81
  raw: "\n"
- kind:
    Keyword: Var
  span:
    start: 83
    end: 86
  raw: var
- kind: Identifier
  span:
    start: 87
    end: 89
  raw: fn
- kind:
    Operator: Assign
  span:
    start: 90
    end: 91
  raw: "="
- kind:
    Keyword: Function
  span:
    start: 92
    end: 100
  raw: function
- kind: OpenParen
  span:
    start: 100
    end: 101
  raw: (
- kind: CloseParen
  span:
    start: 101
    end: 102
  raw: )
- kind: OpenBrace
  span:
    start: 103
    end: 104
  raw: "{"
- kind: Newline
  span:
    start: 104
    end: 105
  raw: "\n"
- kind: Identifier
  span:
    start: 108
    end: 113
  raw: trace
- kind: OpenParen
  span:
    start: 113
    end: 114
  raw: (
- kind:
    String: Double
  span:
    start: 114
    end: 139
  raw: trying to break from fn
- kind: CloseParen
  span:
    start: 139
    end: 140
  raw: )
- kind: Semicolon
  span:
    start: 140
    end: 141
  raw: ;
- kind: Newline
  span:
    start: 141
    end: 142
  raw: "\n"
- kind:
    Keyword: Break
  span:
    start: 145
    end: 150
  raw: break
- kind: Semicolon
  span:
    start: 150
    end: 151
  raw: ;
- kind: Newline
  span:
    start: 151
    end: 152
  raw: "\n"
- kind: CloseBrace
  span:
    start: 154
    end: 155
  raw: "}"
- kind: Newline
  span:
    start: 155
    end: 156
  raw: "\n"
- kind: Identifier
  span:
    start: 158
    end: 163
  raw: trace
- kind: OpenParen
  span:
    start: 163
    end: 164
  raw: (
- kind:
    String: Double
  span:
    start: 164
    end: 170
  raw: "j = "
- kind:
    Operator: Add
  span:
    start: 171
    end: 172
  raw: +
- kind: Identifier
  span:
    start: 173
    end: 174
  raw: j
- kind: CloseParen
  span:
    start: 174
    end: 175
  raw: )
- kind: Semicolon
  span:
    start: 175
    end: 176
  raw: ;
- kind: Newline
  span:
    start: 176
    end: 177
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 179
    end: 181
  raw: if
- kind: OpenParen
  span:
    start: 182
    end: 183
  raw: (
- kind: Identifier
  span:
    start: 183
    end: 184
  raw: j
- kind:
    Operator: Equal
  span:
    start: 185
    end: 187
  raw: "=="
- kind: Integer
  span:
    start: 188
    end: 189
  raw: "1"
- kind: CloseParen
  span:
    start: 189
    end: 190
  raw: )
- kind: OpenBrace
  span:
    start: 191
    end: 192
  raw: "{"
- kind: Newline
  span:
    start: 192
    end: 193
  raw: "\n"
- kind: Identifier
  span:
    start: 196
    end: 198
  raw: fn
- kind: OpenParen
  span:
    start: 198
    end: 199
  raw: (
- kind: CloseParen
  span:
    start: 199
    end: 200
  raw: )
- kind: Semicolon
  span:
    start: 200
    end: 201
  raw: ;
- kind: Newline
  span:
    start: 201
    end: 202
  raw: "\n"
- kind:
    Keyword: Continue
  span:
    start: 205
    end: 213
  raw: continue
- kind: Semicolon
  span:
    start: 213
    end: 214
  raw: ;
- kind: Newline
  span:
    start: 214
    end: 215
  raw: "\n"
- kind: CloseBrace
  span:
    start: 217
    end: 218
  raw: "}"
- kind: Newline
  span:
    start: 218
    end: 219
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 221
    end: 223
  raw: if
- kind: OpenParen
  span:
    start: 224
    end: 225
  raw: (
- kind: Identifier
  span:
    start: 225
    end: 226
  raw: j
- kind:
    Operator: Equal
  span:
    start: 227
    end: 229
  raw: "=="
- kind: Integer
  span:
    start: 230
    end: 231
  raw: "2"
- kind: CloseParen
  span:
    start: 231
    end: 232
  raw: )
- kind: OpenBrace
  span:
    start: 233
    end: 234
  raw: "{"
- kind: Newline
  span:
    start: 234
    end: 235
  raw: "\n"
- kind:
    Keyword: Break
  span:
    start: 238
    end: 243
  raw: break
- kind: Semicolon
  span:
    start: 243
    end: 244
  raw: ;
- kind: Newline
  span:
    start: 244
    end: 245
  raw: "\n"
- kind: CloseBrace
  span:
    start: 247
    end: 248
  raw: "}"
- kind: Newline
  span:
    start: 248
    end: 249
  raw: "\n"
- kind: CloseBrace
  span:
    start: 250
    end: 251
  raw: "}"
- kind: Newline
  span:
    start: 251
    end: 252
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 253
    end: 255
  raw: if
- kind: OpenParen
  span:
    start: 256
    end: 257
  raw: (
- kind: Identifier
  span:
    start: 257
    end: 258
  raw: i
- kind:
    Operator: Equal
  span:
    start: 259
    end: 261
  raw: "=="
- kind: Integer
  span:
    start: 262
    end: 263
  raw: "1"
- kind: CloseParen
  span:
    start: 263
    end: 264
  raw: )
- kind: OpenBrace
  span:
    start: 265
    end: 266
  raw: "{"
- kind: Newline
  span:
    start: 266
    end: 267
  raw: "\n"
- kind:
    Keyword: Continue
  span:
    start: 269
    end: 277
  raw: continue
- kind: Semicolon
  span:
    start: 277
    end: 278
  raw: ;
- kind: Newline
  span:
    start: 278
    end: 279
  raw: "\n"
- kind: CloseBrace
  span:
    start: 280
    end: 281
  raw: "}"
- kind: Newline
  span:
    start: 281
    end: 282
  raw: "\n"
- kind:
    Keyword: If
  span:
    start: 283
    end: 285
  raw: if
- kind: OpenParen
  span:
    start: 286
    end: 287
  raw: (
- kind: Identifier
  span:
    start: 287
    end: 288
  raw: i
- kind:
    Operator: Equal
  span:
    start: 289
    end: 291
  raw: "=="
- kind: Integer
  span:
    start: 292
    end: 293
  raw: "2"
- kind: CloseParen
  span:
    start: 293
    end: 294
  raw: )
- kind: OpenBrace
  span:
    start: 295
    end: 296
  raw: "{"
- kind: Newline
  span:
    start: 296
    end: 297
  raw: "\n"
- kind:
    Keyword: Break
  span:
    start: 299
    end: 304
  raw: break
- kind: Semicolon
  span:
    start: 304
    end: 305
  raw: ;
- kind: Newline
  span:
    start: 305
    end: 306
  raw: "\n"
- kind: CloseBrace
  span:
    start: 307
    end: 308
  raw: "}"
- kind: Newline
  span:
    start: 308
    end: 309
  raw: "\n"
- kind: CloseBrace
  span:
    start: 309
    end: 310
  raw: "}"
- kind: Newline
  span:
    start: 310
    end: 311
  raw: "\n"
