crates/as2/src/lexer/snapshots/ruasc_as2__lexer__tests__all_samples@objects.as.snap
---
source: crates/as2/src/lexer/tests.rs
expression: tokens
input_file: samples/objects.as
---
- kind:
    Keyword: Var
  span:
    start: 0
    end: 3
  raw: var
- kind: Identifier
  span:
    start: 4
    end: 5
  raw: o
- kind:
    Operator: Assign
  span:
    start: 6
    end: 7
  raw: "="
- kind: OpenBrace
  span:
    start: 8
    end: 9
  raw: "{"
- kind: Identifier
  span:
    start: 9
    end: 10
  raw: a
- kind: Colon
  span:
    start: 10
    end: 11
  raw: ":"
- kind: Integer
  span:
    start: 12
    end: 13
  raw: "1"
- kind: Comma
  span:
    start: 13
    end: 14
  raw: ","
- kind: Identifier
  span:
    start: 15
    end: 16
  raw: b
- kind: Colon
  span:
    start: 16
    end: 17
  raw: ":"
- kind: Identifier
  span:
    start: 18
    end: 24
  raw: Object
- kind: CloseBrace
  span:
    start: 24
    end: 25
  raw: "}"
- kind: Semicolon
  span:
    start: 25
    end: 26
  raw: ;
- kind: Newline
  span:
    start: 26
    end: 27
  raw: "\n"
- kind: Identifier
  span:
    start: 27
    end: 32
  raw: trace
- kind: OpenParen
  span:
    start: 32
    end: 33
  raw: (
- kind:
    String: Double
  span:
    start: 33
    end: 40
  raw: "o.a: "
- kind:
    Operator: Add
  span:
    start: 41
    end: 42
  raw: +
- kind: Identifier
  span:
    start: 43
    end: 44
  raw: o
- kind: Period
  span:
    start: 44
    end: 45
  raw: "."
- kind: Identifier
  span:
    start: 45
    end: 46
  raw: a
- kind: CloseParen
  span:
    start: 46
    end: 47
  raw: )
- kind: Semicolon
  span:
    start: 47
    end: 48
  raw: ;
- kind: Newline
  span:
    start: 48
    end: 49
  raw: "\n"
- kind: Identifier
  span:
    start: 49
    end: 54
  raw: trace
- kind: OpenParen
  span:
    start: 54
    end: 55
  raw: (
- kind:
    String: Double
  span:
    start: 55
    end: 62
  raw: "o.b: "
- kind:
    Operator: Add
  span:
    start: 63
    end: 64
  raw: +
- kind: Identifier
  span:
    start: 65
    end: 66
  raw: o
- kind: Period
  span:
    start: 66
    end: 67
  raw: "."
- kind: Identifier
  span:
    start: 67
    end: 68
  raw: b
- kind: CloseParen
  span:
    start: 68
    end: 69
  raw: )
- kind: Semicolon
  span:
    start: 69
    end: 70
  raw: ;
- kind: Newline
  span:
    start: 70
    end: 71
  raw: "\n"
- kind: Identifier
  span:
    start: 71
    end: 76
  raw: trace
- kind: OpenParen
  span:
    start: 76
    end: 77
  raw: (
- kind:
    String: Double
  span:
    start: 77
    end: 93
  raw: "new Object(): "
- kind:
    Operator: Add
  span:
    start: 94
    end: 95
  raw: +
- kind:
    Keyword: New
  span:
    start: 96
    end: 99
  raw: new
- kind: Identifier
  span:
    start: 100
    end: 106
  raw: Object
- kind: OpenParen
  span:
    start: 106
    end: 107
  raw: (
- kind: CloseParen
  span:
    start: 107
    end: 108
  raw: )
- kind: CloseParen
  span:
    start: 108
    end: 109
  raw: )
- kind: Semicolon
  span:
    start: 109
    end: 110
  raw: ;
- kind: Newline
  span:
    start: 110
    end: 111
  raw: "\n"
- kind: Identifier
  span:
    start: 111
    end: 116
  raw: trace
- kind: OpenParen
  span:
    start: 116
    end: 117
  raw: (
- kind:
    String: Double
  span:
    start: 117
    end: 148
  raw: "new Object(1, 2, {}, false): "
- kind:
    Operator: Add
  span:
    start: 149
    end: 150
  raw: +
- kind:
    Keyword: New
  span:
    start: 151
    end: 154
  raw: new
- kind: Identifier
  span:
    start: 155
    end: 161
  raw: Object
- kind: OpenParen
  span:
    start: 161
    end: 162
  raw: (
- kind: Integer
  span:
    start: 162
    end: 163
  raw: "1"
- kind: Comma
  span:
    start: 163
    end: 164
  raw: ","
- kind: Integer
  span:
    start: 165
    end: 166
  raw: "2"
- kind: Comma
  span:
    start: 166
    end: 167
  raw: ","
- kind: OpenBrace
  span:
    start: 168
    end: 169
  raw: "{"
- kind: CloseBrace
  span:
    start: 169
    end: 170
  raw: "}"
- kind: Comma
  span:
    start: 170
    end: 171
  raw: ","
- kind: Identifier
  span:
    start: 172
    end: 177
  raw: "false"
- kind: CloseParen
  span:
    start: 177
    end: 178
  raw: )
- kind: CloseParen
  span:
    start: 178
    end: 179
  raw: )
- kind: Semicolon
  span:
    start: 179
    end: 180
  raw: ;
- kind: Newline
  span:
    start: 180
    end: 181
  raw: "\n"
- kind: Identifier
  span:
    start: 181
    end: 186
  raw: trace
- kind: OpenParen
  span:
    start: 186
    end: 187
  raw: (
- kind:
    String: Double
  span:
    start: 187
    end: 201
  raw: "new Object: "
- kind:
    Operator: Add
  span:
    start: 202
    end: 203
  raw: +
- kind:
    Keyword: New
  span:
    start: 204
    end: 207
  raw: new
- kind: Identifier
  span:
    start: 208
    end: 214
  raw: Object
- kind: CloseParen
  span:
    start: 214
    end: 215
  raw: )
- kind: Semicolon
  span:
    start: 215
    end: 216
  raw: ;
- kind: Newline
  span:
    start: 216
    end: 217
  raw: "\n"
- kind: Identifier
  span:
    start: 217
    end: 222
  raw: trace
- kind: OpenParen
  span:
    start: 222
    end: 223
  raw: (
- kind:
    String: Double
  span:
    start: 223
    end: 236
  raw: "new o.b(): "
- kind:
    Operator: Add
  span:
    start: 237
    end: 238
  raw: +
- kind:
    Keyword: New
  span:
    start: 239
    end: 242
  raw: new
- kind: Identifier
  span:
    start: 243
    end: 244
  raw: o
- kind: Period
  span:
    start: 244
    end: 245
  raw: "."
- kind: Identifier
  span:
    start: 245
    end: 246
  raw: b
- kind: OpenParen
  span:
    start: 246
    end: 247
  raw: (
- kind: CloseParen
  span:
    start: 247
    end: 248
  raw: )
- kind: CloseParen
  span:
    start: 248
    end: 249
  raw: )
- kind: Semicolon
  span:
    start: 249
    end: 250
  raw: ;
- kind: Newline
  span:
    start: 250
    end: 251
  raw: "\n"
