crates/as2/src/lexer/snapshots/ruasc_as2__lexer__tests__all_samples@special_functions.as.snap
---
source: crates/as2/src/lexer/tests.rs
expression: tokens
input_file: samples/as2/special_functions.as
---
- kind: Identifier
  span:
    start: 0
    end: 6
  raw: random
- kind: OpenParen
  span:
    start: 6
    end: 7
  raw: (
- kind: Integer
  span:
    start: 7
    end: 10
  raw: "123"
- kind: CloseParen
  span:
    start: 10
    end: 11
  raw: )
- kind: Semicolon
  span:
    start: 11
    end: 12
  raw: ;
- kind: Newline
  span:
    start: 12
    end: 13
  raw: "\n"
- kind: Identifier
  span:
    start: 13
    end: 18
  raw: trace
- kind: OpenParen
  span:
    start: 18
    end: 19
  raw: (
- kind:
    String: Double
  span:
    start: 19
    end: 28
  raw: message
- kind: CloseParen
  span:
    start: 28
    end: 29
  raw: )
- kind: Semicolon
  span:
    start: 29
    end: 30
  raw: ;
- kind: Newline
  span:
    start: 30
    end: 31
  raw: "\n"
