crates/as2/src/lexer/snapshots/ruasc_as2__lexer__tests__all_samples@trace_hello_world.as.snap
---
source: crates/as2/src/lexer/tests.rs
expression: tokens
input_file: samples/trace_hello_world.as
---
- kind: Identifier
  span:
    start: 0
    end: 5
  raw: trace
- kind: OpenParen
  span:
    start: 5
    end: 6
  raw: (
- kind:
    String: Double
  span:
    start: 6
    end: 19
  raw: Hello World
- kind: CloseParen
  span:
    start: 19
    end: 20
  raw: )
- kind: Semicolon
  span:
    start: 20
    end: 21
  raw: ;
- kind: Newline
  span:
    start: 21
    end: 22
  raw: "\n"
